Test from Windows

--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Lab 2
 This program runs indefinitely.  Normal commands to stop the programs (ctrl-c and ctrl-z) are handled by fuctions that print out that the signal was ignored.  SIGINT, called by the ctrl-c combo and SIGSTP, called by the ctrl-z combo, are handled.
 
 NOTE:  PROGRAM MUST BE KILLED FROM COMMAND LINE TO END THE PROCESS!!!
+
+TEASkd
